[gd_scene load_steps=7 format=2]

[ext_resource path="res://Characters/Enimes/ForestWorld/PlantMonster/TFlower/Attack2.png" type="Texture" id=1]
[ext_resource path="res://Characters/Enimes/ForestWorld/PlantMonster/TFlower/Attack1.png" type="Texture" id=2]
[ext_resource path="res://Characters/Enimes/ForestWorld/PlantMonster/TFlower/Attack3.png" type="Texture" id=3]
[ext_resource path="res://Characters/Enimes/ForestWorld/PlantMonster/TFlower/FlowerShot.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="flowerShot" type="Area2D" groups=[
"BossProjectile",
]]
z_index = 4
collision_layer = 128
collision_mask = 257
script = ExtResource( 4 )
NewColour = Color( 39.76, 0.5, 2, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_flowerShot_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_flowerShot_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
